[package]
name = "eth-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive","cargo"] }
eth2 = {  package="eth2", git = "https://github.com/sigp/lighthouse", branch="stable"  }
consensus_types = { package="types", git = "https://github.com/sigp/lighthouse", branch="stable" }
bls = { package="bls", git = "https://github.com/sigp/lighthouse", branch="stable"  }
futures = { version = "0.3.1" }
tokio = "1.32.0"
hex = "0.4.3"
tree_hash = "0.5.0"

